JS for Custom appear or not appear

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         </select>
         <label for="text">Grading Scale</label>
         <div class="custom-control custom-radio">
-          <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
+          <input onclick="yesnoCheck()" type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
           <label class="custom-control-label" for="customRadio1"><img id="gradescale" src="GradeScale1.png"></label>
         </div>
         <div class="custom-control custom-radio">
-          <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
+          <input onclick="yesnoCheck()" type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
           <label class="custom-control-label" for="customRadio2"><img id ="gradescale" src="GradeScale2.png"></label>
         </div>
         <div class="custom-control custom-radio">
