--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
             <p><input id="ifYes"  type="number" placeholder="C"></p>
             <p><input id="ifYes"  type="number" placeholder="D"/></p>
           </div>
-
+        </div>
+        <div>
+          <label for="text">Grade Weight</label>   
+          
         </div>
       </div>
     </form>
