added Grade Category

--- a/index.html
+++ b/index.html
@@ -83,9 +83,33 @@
           </div>
         </div>
         <div>
-          <label for="text">Grade Weight</label>   
-          
-        </div>
+          <label for="text">Grade Category (check all that apply)</label>   
+          <div class="col-md-12">
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Final</label>
+            </div>
+              <div class="checkbox">
+              <label><input type="checkbox" value="">Midterm</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Quiz</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HW</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Discussion</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Exam</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Project</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Participation</label>
+            </div>
+          </div>
       </div>
     </form>
   </div>
