added remote option

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
           </div>
           <div class="form-check form-check-inline">
             <input class="form-check-input" type="checkbox" id="inlineCheckbox7" value="Sunday">
-            <label class="form-check-label" for="inlineCheckbox8">Su</label>
+            <label class="form-check-label" for="inlineCheckbox7">Su</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox8" value="Sunday">
+            <label class="form-check-label" for="inlineCheckbox8">Remote</label>
           </div>
         </div>
         <label for="text">Term Length</label>
