Adjusted Grading Fields

--- a/index.html
+++ b/index.html
@@ -80,10 +80,16 @@
           <div id="ifYes" style="display:none" >
             <p><input id="ifYes"  type="number" placeholder="A"/></p>
             <p><input id="ifYes"  type="number" placeholder="A-"/></p>
+            <p><input id="ifYes"  type="number" placeholder="B+"/></p>
             <p><input id="ifYes"  type="number" placeholder="B"/></p>
-            <p><input id="ifYes"  type="number" placeholder="B-"/></p>
-            <p><input id="ifYes"  type="number" placeholder="C"></p>
-            <p><input id="ifYes"  type="number" placeholder="D"/></p>
+            <p><input id="ifYes"  type="number" placeholder="B-"></p>
+            <p><input id="ifYes"  type="number" placeholder="C+"/></p>
+            <p><input id="ifYes"  type="number" placeholder="C"/></p>
+            <p><input id="ifYes"  type="number" placeholder="C-"/></p>
+            <p><input id="ifYes"  type="number" placeholder="D+"/></p>
+            <p><input id="ifYes"  type="number" placeholder="D"></p>
+            <p><input id="ifYes"  type="number" placeholder="D-"/></p>
+            <p><input id="ifYes"  type="number" placeholder="F"/></p>
           </div>
         </div>
         <div>
