--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
   <link rel="stylesheet" href="index.css">
   <title>Prototpying Form</title>
 </head>
-
 <body>
   <div class="container" id="CourseForm">
     <form>
       <div class="form-group">
-        <label for="text">Course Name</label>
+        <label id="header" for="text">Course Name</label>
         <input type="text" class="form-control" id="CourseName" aria-describedby="CourseName" maxlength="3" style="text-transform:uppercase"
           placeholder="Enter 3 Letter Acronym For Course Name">
           <div>
-            <label for="text">Class Days:</label>
+            <label id="header" for="text">Class Days:</label>
             <div class="form-check form-check-inline">
               <input onclick="classDayCheck()" class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Monday">
               <label class="form-check-label" for="inlineCheckbox1">M</label>
@@ -54,18 +53,18 @@
               <label class="form-check-label" for="inlineCheckbox8">Remote</label>
             </div>
           </div>
-        <label for="text">Term Length</label>
+        <label id="header" for="text">Term Length</label>
         <select class="form-control form-control-sm">
-          <option>16 weeks</option>
-          <option>12 weeks</option>
-          <option>8 weeks</option>
+          <option>16 Weeks</option>
+          <option>12 Weeks</option>
+          <option>8 Weeks</option>
         </select>
-        <label for="text">Credit Hours</label>
+        <label id="header" for="text">Credit Hours</label>
         <select class="form-control form-control-sm">
           <option>3 Credits</option>
           <option>4 Credits</option>
         </select>
-        <label for="text">Grading Scale</label>
+        <label id="header" for="text">Grading Scale</label>
         <div class="custom-control custom-radio">
           <input onclick="yesnoCheck()" type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
           <label class="custom-control-label" for="customRadio1"><img id="gradescale" src="GradeScale1.png"></label>
@@ -78,6 +77,7 @@
           <input onclick="yesnoCheck()" type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
           <label class="custom-control-label" for="customRadio3">Custom</label>
           <div id="ifYes" style="display:none" >
+            <p>please enter lowerbound</p>
             <p><input id="ifYes"  type="number" min="0" max="100" placeholder="A"/></p>
             <p><input id="ifYes"  type="number" min="0" max="100" placeholder="A-"/></p>
             <p><input id="ifYes"  type="number" min="0" max="100" placeholder="B+"/></p>
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div>
-          <label for="text">Weighted Category (check all that apply)</label>   
+          <label id="header" for="text">Weighted Category (check all that apply)</label>   
           <div class="col-md-12">
             <div class="checkbox">
               <label><input onclick="GradeCategory()" id="Exam" type="checkbox" value="">Exams (if equally weighted)</label>
