--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <form>
       <div class="form-group">
         <label id="header" for="text">Course Name</label>
-        <input type="text" class="form-control" id="CourseName" aria-describedby="CourseName" maxlength="3" style="text-transform:uppercase"
-          placeholder="Enter 3 Letter Acronym For Course Name">
+        <input type="text" class="form-control" id="CourseName" aria-describedby="CourseName" maxlength="3" oninput="let p = this.selectionStart; this.value = this.value.toUpperCase();this.setSelectionRange(p, p);" placeholder="Enter 3 Letter Acronym"
+          >
           <div>
             <label id="header" for="text">Class Days:</label>
             <div class="form-check form-check-inline">
@@ -77,7 +77,8 @@
           <input onclick="yesnoCheck()" type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
           <label class="custom-control-label" for="customRadio3">Custom</label>
           <div id="ifYes" style="display:none" >
-            <p>please enter lowerbound</p>
+            <p>
+              Enter lower bound (ex: If A is 90-100, input '90') </p>
             <p><input id="ifYes"  type="number" min="0" max="100" placeholder="A"/></p>
             <p><input id="ifYes"  type="number" min="0" max="100" placeholder="A-"/></p>
             <p><input id="ifYes"  type="number" min="0" max="100" placeholder="B+"/></p>
