Exam Place Holder Changes

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="col-md-12">
             <div class="checkbox">
               <label><input onclick="GradeCategory()" id="Exam" type="checkbox" value="">Exams (if equally weighted)</label>
-              <input id="CategoryYesExam"style="display:none" type="number" min="0" max="100"placeholder="% of 100y">
+              <input id="CategoryYesExam"style="display:none" type="number" min="0" max="100"placeholder="% of 100">
               <input id="CategoryYesExam2"style="display:none" type="number" min="0" placeholder="Quantity">
             </div>
             <div class="checkbox">
