--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
             </div>
           </div>
       </div>
-      <button>Submit</button>
+      <div>
+        <button>Submit</button>
+      </div>
     </form>
   </div>
 
