--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <select id ="boxlength" class="form-control form-control-sm">
           <option>3 Credits</option>
           <option>4 Credits</option>
+          <option>1 Credits</option>
         </select>
         <label id="header" for="text">Grading Scale</label>
         <div class="custom-control custom-radio">
